--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <script>
-      // Tailor-made Tailwind config for the brand
       tailwind.config = {
         darkMode: 'class',
         theme: {
@@ -41,18 +40,33 @@
           padding-right: 0.8rem;
           color: #E63946;
         }
+        /* Loading fallback */
+        #root:empty::before {
+          content: 'Carregando A Lanterna...';
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100vh;
+          font-family: "Instrument Serif", serif;
+          font-size: 1.5rem;
+          color: #94a3b8;
+        }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/"
   }
 }
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 transition-colors duration-300 dark:bg-[#121212] dark:text-slate-100">
     <div id="root"></div>
+    <!-- CRITICAL: This tag was missing. It starts the application. -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
